Added conversion of ZX81 files P to P81, and P81 to P
Allow to save ZX80/81 screen to .scr file
Allow to LOAD "name" of a ZX81 .P81 file
Added .O (ZX80) file previews: show basic listing
Added .P/.81/.P81 (ZX81) file previews when no screen stored in file: show basic listing
Added some file actions for .81 files
Added real joystick support for SDL2
Added direct functions to increase/decrease/silence Audio Volume
Allow to create link to file on ZX Desktop, from File utilities
Allow to save text note on a ZSF snapshot
Allow to locate rom files running ZEsarUX from a current folder different than the rom path
Allow machine selection by family type (Spectrum, ZX80, ZX81, CPC, etc)
Added .ay file support to File Viewer
Added GENS file support to File Viewer
Allow to change configuration file path from the menu
Allow to view expanded file from Storage submenus (tape, dsk, etc)
Allow to view GO SUB Basic stack
Added configuration wizard when running ZEsarUX for the first time
Added support for up to 4 joystick fire buttons on:
- Kempston joystick (Spectrum): 4 buttons
- Amstrad CPC: 3 buttons
- Master System, SG1000, Colecovision: 2 buttons

* Improvements:

Improved AY Player:
- Allow to load playlist
- Allow to save playlist (full playlist or just marked files)
- Allow to increase track length (for some tracks with incorrect length)
- Added direct functions to next/previous track/file
- Show tenths of a second on song length and time elapsed
- Better shuffle algorithm
- Fixed silence detection when playback paused
- Tell if no song is playing

Improved Sinclair QL emulation:
- Allow to increase RAM size
- Allow to load and save QL screen files
- Added QL Screen file previews on File Selector
- Allow to use win1_ device as an alias to mdv1_ (useful for QL-SD paths)
- Fixed Sinclair QL keyboard: allow fast text writing
- Allow display blanking

Improved ZX Vision:
- Allow to hide minimized windows
- Allow to place windows beyond ZEsarUX main window limits